@@ -57,6 +57,9 @@ def   SURFRAW_screen		screen
 # for each text browser invocation?
 defyn SURFRAW_new_screen	no
 
+# arguments for the screen command
+def   SURFRAW_screen_args	""
+
 # I can't enjoy it with you talking all the time
 defyn SURFRAW_quiet		no
 
